public/css/style.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Fauna One', serif;
    background-image: url("https://i.imgur.com/DxzTVst.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

header {
    display: flex;
    flex-direction: column;
    color: white;
}

h1 {
    font-size: 60px;
    font-family: 'Lobster Two', cursive;
    text-shadow: 3px 3px #ff7300;
    text-align: center;
}

.flex-nav {
    display: flex;
    justify-content: space-evenly;
}

.nav-list-item {
    color: white;
    text-decoration: none;
    border-bottom: 3px solid #fff3;
    font-size: 20px;
}

.nav-list-item:hover {
    border-bottom-color: #fff9;
}

.paragraph-wrapper {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.landing-title {
    padding: 10px 10px 0 10px;
}

.about-vino-italiano {
    text-align: center;
    width: 70%;
}

.full-para {
    border-radius: 25px;
    color: white;
    background-color: rgba(0, 0, 0, 0.6);
}

.landing-para {
    padding: 10px;
    font-size: 20px;
    margin-bottom: 40px;
}

.shade-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    flex-grow: 1;
}

.button-box {
    padding: 20px;
    background-color:rgba(0, 0, 0, 0.7);
    border-radius: 25px;
    border-top: 1px solid #CCCCCC;
    border-right: 1px solid #333333;
    border-bottom: 1px solid #333333;
    border-left: 1px solid #CCCCCC;
    font-size: 40px;
}

.button-box:hover {
    background-color:rgba(0, 0, 0, 0.5);
}

.shade-button-text {
    text-decoration: none;
    color: white;
}

.wine-wrapper {
    display: grid;
    width: 90%;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    margin: 0 auto;
    grid-gap: 1rem;
}

.ind-wine {
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
    background-color: rgba(0, 0, 0, 0.6);
}

.index-img {
    width: 200px;
    height: 250px;
}

footer {
    position: sticky;
    display: flex;
    flex-direction: column;
    align-items: center;
    top: 100vh;
    padding-top: 20px;
    color: white;
}

.footer-div {
    margin-top: 10px;
    margin-bottom: 25px;
}

